--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "finance-case-study",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18.0.0 <=20.x.x",
+    "npm": ">=9.0.0"
+  },
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
