Simplify build configuration and remove ajv overrides

--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "serve": "npx serve -s build"
@@ -41,16 +41,4 @@
       "last 1 safari version"
     ]
   },
-  "overrides": {
-    "ajv": "^8.17.1",
-    "ajv-keywords": "^5.1.0",
-    "fork-ts-checker-webpack-plugin": {
-      "ajv": "^8.17.1",
-      "ajv-keywords": "^5.1.0"
-    }
-  },
-  "devDependencies": {
-    "ajv": "^8.17.1",
-    "ajv-keywords": "^5.1.0"
-  }
 }
